Added react router

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express": "^4.14.0",
     "react": "^0.14.8",
     "react-dom": "^0.14.8",
+    "react-router": "^2.7.0",
     "webpack": "^1.13.2"
   },
   "devDependencies": {
