--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "eslint": "^3.4.0",
     "eslint-plugin-react": "^6.2.0",
     "express": "^4.14.0",
+    "material-ui": "^0.15.4",
     "react": "^0.14.8",
     "react-dom": "^0.14.8",
     "react-router": "^2.7.0",
+    "react-tap-event-plugin": "^1.0.0",
     "webpack": "^1.13.2"
   },
   "devDependencies": {
