--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-react": "^6.2.0",
     "express": "^4.14.0",
     "material-ui": "^0.15.4",
+    "mongodb": "^2.2.9",
     "react": "^0.14.8",
     "react-dom": "^0.14.8",
     "react-router": "^2.7.0",
