--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "MIT",
   "homepage": "http://ruphisigmakappa.com",
   "dependencies": {
+    "babel-cli": "^6.18.0",
     "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.5",
     "babel-plugin-transform-class-properties": "^6.11.5",
@@ -25,17 +26,21 @@
     "babel-polyfill": "^6.13.0",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
-    "babel-preset-stage-0": "^6.5.0",
+    "babel-preset-stage-2": "^6.5.0",
     "babel-register": "^6.14.0",
     "eslint": "^3.4.0",
     "eslint-plugin-react": "^6.2.0",
     "express": "^4.14.0",
-    "material-ui": "^0.15.4",
+    "material-ui": "^0.16.3",
     "mongodb": "^2.2.9",
-    "react": "^0.14.8",
-    "react-dom": "^0.14.8",
+    "nodemon": "^1.11.0",
+    "react": "^15.4.0",
+    "react-dom": "^15.0.0",
+    "react-redux": "^4.4.6",
     "react-router": "^2.7.0",
-    "react-tap-event-plugin": "^1.0.0",
+    "react-tap-event-plugin": "^2.0.0",
+    "redux": "^3.6.0",
+    "redux-form": "^6.3.2",
     "webpack": "^1.13.2"
   },
   "devDependencies": {
