--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "babel-polyfill": "^6.13.0",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-0": "^6.16.0",
     "babel-preset-stage-2": "^6.5.0",
     "babel-register": "^6.14.0",
     "eslint": "^3.4.0",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.2.0",
     "express": "^4.14.0",
     "material-ui": "^0.16.3",
